Add Singularity Alloy Ball Lang & JEI Info

--- a/src/main/resources/assets/morecapacitor/lang/en_us.lang
+++ b/src/main/resources/assets/morecapacitor/lang/en_us.lang
@@ -8,3 +8,9 @@ item.morecapacitor.singularity_alloy_ball.name=Singularity Alloy Grinding Ball
 tile.morecapacitor.singularity_alloy_block.tooltip=Can be used as beacon base
 jei.morecapacitor.singularity_alloy_block.info=§f§lSingularity Alloy Block\n\nCan be used as beacon base
 
+jei.morecapacitor.singularity_alloy_ball.info=§f§lSingularity Alloy Grinding Ball
+jei.morecapacitor.singularity_alloy_ball.info1=\n§9SAG Mill Grinding Ball
+jei.morecapacitor.singularity_alloy_ball.info2=§7Main Output 300%
+jei.morecapacitor.singularity_alloy_ball.info3=§7Bonus Output 300%
+jei.morecapacitor.singularity_alloy_ball.info4=§7Power Use 130%
+
